<?xml version="1.0"?>
<package>
  <name>map_loader</name>
  <version>1.0.0</version>
  <description>This package loads ground plane reflectivity map
    and 3D pointcloud map as pointcloud2 messages</description>
  <author>Ankit Vora</author>
  <author>Siddharth Agarwal</author>
  <maintainer email="avora3@ford.com">Ankit Vora</maintainer>
  <maintainer email="sagarw20@ford.com">Siddharth Agarwal</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
